fix #4 upgrade options usability Settings descriptions, text clickable, better labels

--- a/src/options/options.css
+++ b/src/options/options.css
@@ -45,6 +45,11 @@ header .icon {
   margin-left: 10px;
 }
 
+.option-item__description small {
+  display: block;
+  color: #818c9a;
+}
+
 /* The switch - the box around the slider */
 .switch {
   position: relative;
