--- a/src/options/options.css
+++ b/src/options/options.css
@@ -75,31 +75,31 @@ section {
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .slider:before {
   position: absolute;
-  content: "";
+  content: '';
   height: 16px;
   width: 16px;
   left: 3px;
   bottom: 3px;
   background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
-input:checked+.slider {
+input:checked + .slider {
   background-color: #be2d2d;
 }
 
-input:focus+.slider {
+input:focus + .slider {
   box-shadow: 0 0 1px #be2d2d;
 }
 
-input:checked+.slider:before {
+input:checked + .slider:before {
   -webkit-transform: translateX(18px);
   -ms-transform: translateX(18px);
   transform: translateX(18px);
@@ -125,7 +125,6 @@ button {
 
 button:hover {
   background-color: #d43b3b;
-
 }
 
 /* saved feedback */
